--- a/PlayerStatControllerExtensionExample/PlayerStatControllerExtensionExample.csproj
+++ b/PlayerStatControllerExtensionExample/PlayerStatControllerExtensionExample.csproj
@@ -45,6 +45,7 @@
     </Reference>
     <Reference Include="PlayerStatController">
       <HintPath>..\PlayerController\PlayerStatController.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
