--- a/PlayerStatControllerExample/PlayerStatControllerExample.csproj
+++ b/PlayerStatControllerExample/PlayerStatControllerExample.csproj
@@ -44,7 +44,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="PlayerStatController">
-      <HintPath>..\PlayerController\PlayerStatController.dll</HintPath>
+      <HintPath>..\PlayerStatController\PlayerStatController.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
