--- a/PlayerStatController/PlayerStatController.csproj
+++ b/PlayerStatController/PlayerStatController.csproj
@@ -67,6 +67,7 @@
     <Compile Include="src\Binding\types\CharacterBag.cs" />
     <Compile Include="src\Binding\types\CharacterDisplayInfoStat.cs" />
     <Compile Include="src\Binding\types\Flashlights.cs" />
+    <Compile Include="src\Binding\Base Bindings\VehicleBaseBindings.cs" />
     <Compile Include="src\Logging\Logging.cs" />
     <Compile Include="src\Binding\Bindings.cs" />
     <Compile Include="src\Controllers\XUiC_PlayerStatController.cs" />
