--- a/PlayerStatController/PlayerStatController.csproj
+++ b/PlayerStatController/PlayerStatController.csproj
@@ -66,6 +66,7 @@
     <Compile Include="src\Binding\Enumeration.cs" />
     <Compile Include="src\Binding\types\CharacterBag.cs" />
     <Compile Include="src\Binding\types\CharacterDisplayInfoStat.cs" />
+    <Compile Include="src\Binding\types\CharacterHudStats.cs" />
     <Compile Include="src\Binding\types\Flashlights.cs" />
     <Compile Include="src\Binding\Base Bindings\VehicleBaseBindings.cs" />
     <Compile Include="src\Logging\Logging.cs" />
