Moved some of the bindings to CharacterSheetStats.cs and removed the CharacterMainStat class as it has been replaced by BindingAlias.

--- a/PlayerStatController/PlayerStatController.csproj
+++ b/PlayerStatController/PlayerStatController.csproj
@@ -67,6 +67,7 @@
     <Compile Include="src\Binding\types\CharacterBag.cs" />
     <Compile Include="src\Binding\types\CharacterDisplayInfoStat.cs" />
     <Compile Include="src\Binding\types\CharacterHudStats.cs" />
+    <Compile Include="src\Binding\types\CharacterSheetStats.cs" />
     <Compile Include="src\Binding\types\Flashlights.cs" />
     <Compile Include="src\Binding\Base Bindings\VehicleBaseBindings.cs" />
     <Compile Include="src\Logging\Logging.cs" />
